# wxbtool

./: .flake8  .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
docs/: index.md
docs/technical/: index.md
docs/technical/architecture/: overview.md
docs/technical/extension/: custom_models.md  (+1 more)
docs/user/: installation.md  quickstart.md  troubleshooting.md
projects/: 001_renaming.md  002_flexible_resolution.md  003_flexible_granularity.md  004_registries.md  005_multi_node.md  006_logging_refactor.md  007_data_aggragation.md
tests/: test_dataset.py  test_resolution.py  test_rmse_by_time.py  test_test.py  test_train.py  test_windowarray.py
tests/models/: climate_30d.py  climate_60d.py  climate_90d.py  climate_rnn.py  fast_10d.py  fast_3d.py  fast_6d.py  fast_gan.py  model.py  modeltest.py  tgt_mdl.py
tests/spec/: spec.py  spectest.py
wxbtool/: wxb.py
wxbtool/core/: callbacks.py  config.py  metrics.py  model.py  plotter.py  setting.py
wxbtool/data/: aggregator.py  climatology.py  constants.py  dataset.py  download.py  dsserver.py  path.py  variables.py
wxbtool/framework/: eval.py  infer.py  metrics.py  setting.py  test.py  train.py
wxbtool/lightning/: base.py  callbacks.py  gan.py  seq2seq.py
wxbtool/metrics/: acc.py  crps.py  rmse.py
wxbtool/nn/: callbacks.py  config.py  eval.py  infer.py  lightning.py  model.py  setting.py  test.py  train.py
wxbtool/norms/: meanstd.py  minmax.py
wxbtool/paradigm/: base.py  gan.py  seq2seq.py
wxbtool/util/: plot.py  plotter.py
(+21 files in other folders)
