[tool.poetry]
name = "wxbtool"
version = "0.1.6"
description = "A toolkit for WeatherBench based on PyTorch"
authors = ["Mingli Yuan <mingli.yuan@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.8.0"
numpy = "^1.20.0"
netcdf4 = "^1.5.6"
toolz = "^0.11.1"
dask = "^2021.3.0"
xarray = "^0.17.0"
opencv-python = "^4.5.1.48"
arrow = "^1.1.1"
python-decouple = "^3.5"
leibniz = "^0.1.0"
flask = "^1.1.2"
msgpack = "^1.0.2"
msgpack-numpy = "^0.4.7.1"
requests = "^2.25.1"
gunicorn = "^20.0.4"
arghandler = "^1.4.1"
lightning = "^1.2.10"
requests-unixsocket = "^0.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
flake8 = "^3.9.0"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
